# ivts-website-u56vwu

./: README.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd-development.yml  cd-production.yml  cd-staging.yml  ci.yml  dependency-updates.yml  security-scan.yml
blitzy/documentation/: Input Prompt.md  Project Guide.md  Technical Specifications.md
docs/: README.md  architecture.md
docs/backend/: README.md  api.md  database.md  file-processing.md  security.md  services.md
docs/deployment/: README.md  ci-cd.md  environments.md
docs/development/: getting-started.md  security.md  standards.md  testing.md  workflows.md
docs/infrastructure/: README.md  aws.md  network.md
docs/integrations/: aws.md  contentful.md  hubspot.md
docs/operations/: backup-restore.md  disaster-recovery.md  monitoring.md
docs/web/: README.md  accessibility.md  (+3 more)
infrastructure/: README.md
src/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  config.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  wsgi.py
src/backend/app/: __init__.py  extensions.py  main.py
src/backend/app/api/: __init__.py  errors.py  routes.py  validators.py
src/backend/app/api/v1/: __init__.py
src/backend/app/api/v1/endpoints/: __init__.py  case_studies.py  contact.py  demo_request.py  impact_stories.py  quote_request.py  services.py  uploads.py
src/backend/app/api/v1/models/: __init__.py  case_study.py  file_upload.py  form_submission.py  impact_story.py  service.py  user.py
src/backend/app/api/v1/schemas/: __init__.py  case_study.py  contact.py  demo_request.py  impact_story.py  quote_request.py  service.py  upload.py
src/backend/app/cache/: __init__.py  decorators.py  redis_cache.py
src/backend/app/core/: __init__.py  config.py  errors.py  events.py  exceptions.py  logging.py  security.py
src/backend/app/db/: __init__.py  base.py  init_db.py  session.py
src/backend/app/db/migrations/: __init__.py  env.py
src/backend/app/integrations/: __init__.py  aws_s3.py  contentful.py  google_analytics.py  hubspot.py  sendgrid.py
src/backend/app/middlewares/: __init__.py  cors_middleware.py  error_handler.py  rate_limiter.py  request_logger.py  security_middleware.py
src/backend/app/monitoring/: __init__.py  alerting.py  logging.py  metrics.py  tracing.py
src/backend/app/queue/: __init__.py  tasks.py  worker.py
src/backend/app/security/: __init__.py  captcha.py  file_scanner.py  input_validation.py  jwt.py  rate_limiting.py
src/backend/app/services/: __init__.py  analytics_service.py  content_service.py  crm_service.py  email_service.py  file_upload_service.py  form_processing_service.py  security_service.py
src/backend/app/templates/: __init__.py
src/backend/app/templates/email/: base_email.html  contact_confirmation.html  demo_request.html  internal_notification.html  upload_complete.html  upload_confirmation.html  upload_failed.html
src/backend/app/utils/: aws_utils.py  crm_utils.py  email_utils.py  file_utils.py  logging_utils.py  security_utils.py  validation_utils.py
src/backend/migrations/: README.md  env.py
src/backend/scripts/: __init__.py  db_backup.py  generate_api_docs.py  performance_test.py  seed_data.py
src/backend/tests/: __init__.py  conftest.py  test_config.py
src/backend/tests/api/: __init__.py  test_case_studies.py  test_contact.py  test_demo_request.py  test_impact_stories.py  test_quote_request.py  test_services.py
src/backend/tests/integrations/: __init__.py  test_aws_s3.py  test_contentful.py  test_hubspot.py  test_sendgrid.py
src/backend/tests/security/: __init__.py  test_captcha.py  test_file_scanner.py  test_input_validation.py
src/backend/tests/services/: __init__.py  test_content_service.py  test_crm_service.py  test_email_service.py  test_file_upload_service.py  test_form_processing_service.py
src/backend/tests/utils/: __init__.py  test_file_utils.py  test_security_utils.py  test_validation_utils.py
(+222 files in other folders)
